syntax = "proto3";

package todo.todo;

option go_package = "grpc/protocol_buffer";

service TodoService {
  rpc CreateTodoHandler (TodoCreateRequestModel) returns (TodoCreateResponseModel);
}

enum status {
  Todo = 0;
  InProgress = 1;
  Done = 2;
  // default -> todo
}

message TodoCreateRequestModel {
  string title = 1;
  status status = 2;
  string description = 3;
  string todoDate = 4; // time RFC3339 format
}

message TodoCreateResponseModel {
}

/*
 protoc --go_out=gen --go-grpc_out=gen /module/todo/delivery/grpc/model/todo.proto
 */